将Integer.valueOf改成new Integer(1.4兼容)